fix spacing, etc

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -35,8 +35,7 @@ body {
   box-shadow: 1px 1px 2px 0 #d0d0d0;
 	background: image_url('computer.jpg') center;
   border: 1px solid #ccc;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  margin-top: 10px;
+  border-color: transparent;
   margin-bottom: 10px;
 	color: white;
 	box-shadow: 0px 3px 8px #2a2a2a;
@@ -104,7 +103,7 @@ body {
 }
 
 .services h2 {
-  font-size: 33px;
+  font-size: 38px;
 }
 
 .serv p {
@@ -305,7 +304,8 @@ a {
 }
 
 .beach {
-  background: image_url('chair5.jpeg') center ;
+  background: image_url('water.jpeg') no-repeat center bottom fixed;
+  background-size: cover;
   box-shadow: 0px 3px 8px #2a2a2a;
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -339,12 +339,12 @@ hr {
 
 .program {
   float: right;
-  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .man {
   float: left;
-  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .social-button {
